Hopefully fix color for dark mode icon

--- a/assets/css/darkmode.css
+++ b/assets/css/darkmode.css
@@ -10,4 +10,5 @@
 .js-dark-toggle svg {
   height: 1.125rem;
   width: 1.125rem;
+  color: var(--darkreader-neutral-text, black)
 }
